k8s/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    app.kubernetes.io/managed-by: helm
